Set up file structure

--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,17 @@
 {
-  "development": {
-    "database": "express_auth_development",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
-  },
-  "test": {
-    "database": "express_auth_test",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
-  },
-  "production": {
-    "database": "express_auth_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
-  }
+    "development": {
+        "database": "trackerapp_development",
+        "host": "127.0.0.1",
+        "dialect": "postgres"
+    },
+    "test": {
+        "database": "trackerapp_test",
+        "host": "127.0.0.1",
+        "dialect": "postgres"
+    },
+    "production": {
+        "database": "trackerapp_production",
+        "host": "127.0.0.1",
+        "dialect": "postgres"
+    }
 }
